--- a/frontend/stringspot/src/styles/style.css
+++ b/frontend/stringspot/src/styles/style.css
@@ -245,25 +245,39 @@ input:focus {
 .suggestions-wrapper {
     align-items: center;
     justify-content: center;
-    overflow-y: scroll;
     border: 1px solid black;
     border-radius: 25px;
     background-color: white;
     width: fit-content;
     position: absolute;
     top: 40px;
+    overflow: hidden;
     z-index: 10;
 }
 
 .suggestions {
-    padding: 10px;
+    position: relative;
+    padding: 1rem .5rem;
+    padding-right: 0;
     width: 25vw;
     max-height: 30vh;
+    overflow-y: auto;
+    box-sizing: content-box;
+}
+
+.suggestions::-webkit-scrollbar {
+    width: 1rem;
+}
+
+.suggestions::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    border-radius: 8px;
+    border: 2px solid white;
+    box-shadow: inset 0 0 2px rgba(0, 0, 0, 1);
 }
 
 .suggestion {
     cursor: pointer;
-    box-sizing: border-box;
     height: 2rem;
     display: flex;
     align-items: center;
